# go1-ros-object-detection

./: README.md
src/go1_behavior/: package.xml
src/go1_behavior/launch/: behavior_full.launch
src/go1_behavior/scripts/: 2approach.py  approach_bottle_node.py
src/go1_movement/: CMakeLists.txt  package.xml
src/go1_movement/include/: convert.h
src/go1_movement/launch/: teleop.launch
src/go1_movement/src/: go1_teleop.cpp  highcmd_publisher.cpp
src/go1_vision/: CMakeLists.txt  package.xml
src/go1_vision/scripts/: bottle_detector.py  prueba.py
